--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./css/index.css" />
+  <link rel="stylesheet" href="./css/g17css.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -39,23 +40,23 @@
 <body class="body">
   <header class="header">
     <nav class="header-nav">
-      <div class="header-nav__container">
-        <a href="#iHero" class="header-nav__link-logo-container">
+      <div class="container container--headed">
+        <a href="#iHero">
           <img src="./assets/img/logo-base-2.webp" alt="Logo Base 2" width="108" height="32"
             class="header-nav__link-logo" />
         </a>
-        <label for="menu" class="icon"><i class="bi bi-list"></i></label>
+        <label for="menu" class="menu-icon"><i class="bi bi-list"></i></label>
         <input type="checkbox" id="menu" class="menu-checkbox" />
-        <ul class="header-nav__menu-list menu--hamburger">
+        <ul class="menu menu--hamburger">
           <li>
-            <a href="#iExperience" class="header-nav__menu-link">Experiencia</a>
+            <a href="#iExperience" class="menu__link">Experiencia</a>
           </li>
           <li>
-            <a href="#iContact" class="header-nav__menu-link">Contacto</a>
+            <a href="#iContact" class="menu__link">Contacto</a>
           </li>
           <li>
-            <a href="#" target="_blank" rel="noopener noreferrer"
-              class="header-nav__menu-link header-nav__menu-link--active">Juan Marquina</a>
+            <a href="https://www.linkedin.com/in/elliotgaramendi/" target="_blank" rel="noopener noreferrer"
+              class="menu__link menu__link--active">Juan Marquina</a>
           </li>
         </ul>
       </div>
@@ -71,7 +72,7 @@
             Somos el mejor lugar donde puedes aprender sobre desarrollo web frontend. Asimismo, con Base 2 by Web 4B
             puedes hacer realidad ese sueño que tienes en mente. ¡Cambia tu vida!
           </p>
-          <a href="#" class="button button--primary">¡Aprender gratis!</a>
+          <a href="https://www.linkedin.com/in/elliotgaramendi/" class="button button--primary">¡Aprender gratis!</a>
         </div>
         <div class="i-hero__img-container">
           <img src="./assets/img/user.png" alt="Elliot Garamendi" width="256" height="256"
@@ -141,7 +142,7 @@
             </ul>
           </div>
         </div>
-        <a href="#" class="button button--primary">Ver más experiencias</a>
+        <a href="https://www.linkedin.com/in/elliotgaramendi/" class="button button--primary">Ver más experiencias</a>
       </div>
     </section>
     <figure class="wave wave--reverse">
@@ -168,32 +169,32 @@
       <div class="container container--elements">
         <ul class="menu">
           <li>
-            <a href="#">
+            <a href="https://www.youtube.com/channel/UCE9whBrtYnLWrpzwk6z_JUA">
               <img src="./assets/svg/logo-youtube.svg" alt="YouTube" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://github.com/ElliotXLeo">
               <img src="./assets/svg/logo-github.svg" alt="GitHub" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://www.linkedin.com/in/elliotgaramendi/">
               <img src="./assets/svg/logo-linkedin.svg" alt="LinkedIn" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://www.instagram.com/elliotgaramendi/">
               <img src="./assets/svg/logo-instagram.svg" alt="Instagram" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://www.facebook.com/elliotgaramendi">
               <img src="./assets/svg/logo-facebook.svg" alt="Facebook" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://elliotxleo.github.io/portafolio-web-elgs/">
               <img src="./assets/svg/logo-internet.svg" alt="Web" width="24" height="24" class="menu__img" />
             </a>
           </li>
